--- a/index.html
+++ b/index.html
@@ -11,63 +11,65 @@
 
 
 <body>
-    <h1>Ты сегодня покормил кота?</h1>
-    <div class="wrapper">
-        <div class="cats">
-            <label>
-                <input type="checkbox">
-                <div class="food">
-                    <p class="food-introduction">Сказочное заморское яcтво</p>
-                    <div class="food-name__wrapper">
-                        <p class="food-name">Нямушка</p>
-                        <p class="food-components">с фуа-гра</p>
-                        <p class="food-quantity"><strong>10</strong> порций <br> мышь в подарок</p>
+    <div class="body-wrapper">
+        <h1>Ты сегодня покормил кота?</h1>
+        <div class="wrapper">
+            <div class="cats">
+                <label>
+                    <input type="checkbox">
+                    <div class="food">
+                        <p class="food-introduction">Сказочное заморское яcтво</p>
+                        <div class="food-name__wrapper">
+                            <p class="food-name">Нямушка</p>
+                            <p class="food-components">с фуа-гра</p>
+                            <p class="food-quantity"><strong>10</strong> порций <br> мышь в подарок</p>
+                        </div>
+                        <div class="cat-photo"></div>
+                        <div class="food-weight">
+                            <p class="food-weight--amount">0,5</p>
+                            <p class="food-weight--gramms">кг</p>
+                        </div>
                     </div>
-                    <div class="cat-photo"></div>
-                    <div class="food-weight">
-                        <p class="food-weight--amount">0,5</p>
-                        <p class="food-weight--gramms">кг</p>
+                </label>
+            </div>
+            <div class="cats">
+                <label>
+                    <input type="checkbox">
+                    <div class="food">
+                        <p class="food-introduction">Сказочное заморское яcтво</p>
+                        <div class="food-name__wrapper">
+                            <p class="food-name">Нямушка</p>
+                            <p class="food-components">с рыбой</p>
+                            <p class="food-quantity"><strong>10</strong> порций <br><strong>2</strong> мыши в подарок</p>
+                        </div>
+                        <div class="cat-photo"></div>
+                        <div class="food-weight">
+                            <p class="food-weight--amount">2</p>
+                            <p class="food-weight--gramms">кг</p>
+                        </div>
                     </div>
-                </div>
-            </label>
-        </div>
-        <div class="cats">
-            <label>
-                <input type="checkbox">
-                <div class="food">
-                    <p class="food-introduction">Сказочное заморское яcтво</p>
-                    <div class="food-name__wrapper">
-                        <p class="food-name">Нямушка</p>
-                        <p class="food-components">с рыбой</p>
-                        <p class="food-quantity"><strong>10</strong> порций <br><strong>2</strong> мыши в подарок</p>
+                </label>
+            </div>
+            <div class="cats">
+                <label>
+                    <input type="checkbox">
+                    <div class="food">
+                        <p class="food-introduction">Сказочное заморское яcтво</p>
+                        <div class="food-name__wrapper">
+                            <p class="food-name">Нямушка</p>
+                            <p class="food-components">с курой</p>
+                            <p class="food-quantity">
+                                <strong>10</strong>порций<br><strong>5</strong> мышей в подарок<br>Заказчик доволен
+                            </p>
+                        </div>
+                        <div class="cat-photo"></div>
+                        <div class="food-weight">
+                            <p class="food-weight--amount">5</p>
+                            <p class="food-weight--gramms">кг</p>
+                        </div>
                     </div>
-                    <div class="cat-photo"></div>
-                    <div class="food-weight">
-                        <p class="food-weight--amount">2</p>
-                        <p class="food-weight--gramms">кг</p>
-                    </div>
-                </div>
-            </label>
-        </div>
-        <div class="cats">
-            <label>
-                <input type="checkbox">
-                <div class="food">
-                    <p class="food-introduction">Сказочное заморское яcтво</p>
-                    <div class="food-name__wrapper">
-                        <p class="food-name">Нямушка</p>
-                        <p class="food-components">с курой</p>
-                        <p class="food-quantity">
-                            <strong>10</strong>порций<br><strong>5</strong> мышей в подарок<br>Заказчик доволен
-                        </p>
-                    </div>
-                    <div class="cat-photo"></div>
-                    <div class="food-weight">
-                        <p class="food-weight--amount">5</p>
-                        <p class="food-weight--gramms">кг</p>
-                    </div>
-                </div>
-            </label>
+                </label>
+            </div>
         </div>
     </div>
 </body>
