added gradient on background

--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
                             <p class="food-weight--gramms">кг</p>
                         </div>
                     </div>
+                    <div class="cats-footer">Чего сидишь? Порадуй котэ, <span class="cats-footer--buy">купи</span><span>.</span>
+                    </div>
+                    <div class="cats-footer hidden">Печень утки отварная с артишоками</div>
                 </label>
             </div>
             <div class="cats">
@@ -48,6 +51,8 @@
                             <p class="food-weight--gramms">кг</p>
                         </div>
                     </div>
+                    <div class="cats-footer" onclick="changeText()">Чего сидишь? Порадуй котэ, <span class="cats-footer--buy">купи</span><span>.</span></div>
+                    <div class="cats-footer--hidden hidden">Печень утки отварная с артишоками</div>
                 </label>
             </div>
             <div class="cats">
@@ -68,10 +73,13 @@
                             <p class="food-weight--gramms">кг</p>
                         </div>
                     </div>
+                    <div class="cats-footer">Чего сидишь? Порадуй котэ, <span class="cats-footer--buy">купи</span><span>.</span></div>
+                    <div class="cats-footer hidden">Печень утки отварная с артишоками</div>
                 </label>
             </div>
         </div>
     </div>
+    <script src="./build/js/all.js"></script>
 </body>
 
 </html>
