3rd pack was disabled(finished)

--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
                 </label>
             </div>
             <div class="cats">
-                <label>
-                    <input type="checkbox">
+                <label class="ended">
+                    <input type="checkbox" disabled>
                     <div class="food">
                         <p class="food-introduction">Сказочное заморское яcтво</p>
                         <div class="food-name__wrapper">
@@ -73,8 +73,9 @@
                             <p class="food-weight--gramms">кг</p>
                         </div>
                     </div>
-                    <div class="cats-footer">Чего сидишь? Порадуй котэ, <span class="cats-footer--buy">купи</span><span>.</span></div>
+                    <div class="cats-footer hidden">Чего сидишь? Порадуй котэ, <span class="cats-footer--buy">купи</span><span>.</span></div>
                     <div class="cats-footer hidden">Печень утки отварная с артишоками</div>
+                    <div class="cats-footer--ended">Печалька, с курой закончился.</div>
                 </label>
             </div>
         </div>
