--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
         <div class="wrapper">
             <div class="cats">
                 <label>
-                    <input type="checkbox">
+                    <input type="checkbox" id="test" onclick="myFunction()">
                     <div class="food">
-                        <p class="food-introduction">Сказочное заморское яcтво</p>
+                        <p class="food-introduction" id="test2">Сказочное заморское яcтво</p>
+                        <p class="food-introduction--hidden hidden">Котэ не одобряет?</p>
                         <div class="food-name__wrapper">
                             <p class="food-name">Нямушка</p>
                             <p class="food-components">с фуа-гра</p>
@@ -32,7 +33,7 @@
                     </div>
                     <div class="cats-footer">Чего сидишь? Порадуй котэ, <span class="cats-footer--buy">купи</span><span>.</span>
                     </div>
-                    <div class="cats-footer hidden">Печень утки отварная с артишоками</div>
+                    <div class="cats-footer--hidden hidden">Печень утки отварная с артишоками</div>
                 </label>
             </div>
             <div class="cats">
@@ -40,6 +41,7 @@
                     <input type="checkbox">
                     <div class="food">
                         <p class="food-introduction">Сказочное заморское яcтво</p>
+                        <p class="food-introduction--hidden hidden">Котэ не одобряет?</p>
                         <div class="food-name__wrapper">
                             <p class="food-name">Нямушка</p>
                             <p class="food-components">с рыбой</p>
@@ -60,6 +62,7 @@
                     <input type="checkbox" disabled>
                     <div class="food">
                         <p class="food-introduction">Сказочное заморское яcтво</p>
+                        <p class="food-introduction--hidden hidden">Котэ не одобряет?</p>
                         <div class="food-name__wrapper">
                             <p class="food-name">Нямушка</p>
                             <p class="food-components">с курой</p>
